[211112] feat : detail swagger 작업
