# routes/dog.js
@@ -33,7 +33,7 @@ router.post("/dogInfo", upload.single("dogImage"), auth, async (req, res, next) 
       // dogImage,
       // userId,
     } = req.body;
-
+    console.log(dogGender, dogName)
     const dogImage = req.file.location;
     console.log("dogImage:", dogImage)
 
@@ -49,12 +49,13 @@ router.post("/dogInfo", upload.single("dogImage"), auth, async (req, res, next) 
       userId,
     ];
 
-    console.log(params);
+    console.log("정보들어",params);
     const query =
       "INSERT INTO dog(dogGender, dogName, dogSize, dogBreed, dogAge, neutral, dogComment, dogImage, userId) VALUES(?,?,?,?,?,?,?,?,?)";
-    // console.log("여기까지 오나 실험", query)
+    console.log("여기까지 오나 실험", query)
 
     await db.query(query, params, (error, rows, fields) => {
+      console.log("여기 들어옴?",query)
       if (error) {
         return res.status(400).json({
           success: false,
